# chat_webui_v2

./: .env.example  .gitignore  FEATURE_LIST.md  IMPLEMENTATION_PLAN.md  README.md  mock_api.js  pyproject.toml  todo.txt
.github/workflows/: ci.yml
api/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
api/routers/: chat.py  config.py  health.py  models.py  sessions.py  title.py  version.py
api/services/: chat.py  config.py  models.py  prompt_builder.py  sessions.py  title.py
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  openapi.json  schema.ts
frontend/src/components/: ChatComposer.test.tsx  ChatComposer.tsx  ChatMessage.tsx  ChatMetricsHUD.tsx  ChatSidebar.tsx  ChatTranscript.tsx  CommandPalette.tsx  FirstRunWizard.test.tsx  FirstRunWizard.tsx  ModelSelector.tsx  OfflineBanner.tsx  ProtectedLayout.tsx
frontend/src/hooks/: useChatSession.ts
frontend/src/pages/: Chat.tsx  Models.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/stores/: config.ts  models.ts  sessions.ts  theme.test.ts
frontend/tests/: navigation.spec.ts  smoke.spec.ts
frontend/tests/support/: mockApi.ts
tests/: conftest.py  test_chat.py  test_config.py  test_health.py  test_models.py  test_sessions.py
